[project]
name = "learning-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.11",
    "langchain-cerebras>=0.8.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
]
